--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_API=mongodb+srv://jonshean:ANgel98!@topgautos.fxvegiw.mongodb.net/?retryWrites=true&w=majority
+MONGODB_KEY=mongodb+srv://jonshean:ANgel98!@topgautos.fxvegiw.mongodb.net/?retryWrites=true&w=majority
