--- a/package.json
+++ b/package.json
@@ -1,23 +1,29 @@
 {
-  "name": "tga-app",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/yuurierusan/Top-G-Auto-App.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/yuurierusan/Top-G-Auto-App/issues"
-  },
-  "homepage": "https://github.com/yuurierusan/Top-G-Auto-App#readme",
-  "dependencies": {
-    "mongoose": "^6.9.1"
-  }
+    "name": "tga-app",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node server.js",
+        "dev": "nodemon server.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/yuurierusan/Top-G-Auto-App.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/yuurierusan/Top-G-Auto-App/issues"
+    },
+    "homepage": "https://github.com/yuurierusan/Top-G-Auto-App#readme",
+    "dependencies": {
+        "express": "^4.18.2",
+        "mongoose": "^6.9.1"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.20"
+    }
 }
