--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "homepage": "https://github.com/yuurierusan/Top-G-Auto-App#readme",
     "dependencies": {
+        "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "mongoose": "^6.9.1"
