--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
-        "mongoose": "^6.9.1"
+        "mongoose": "^6.9.1",
+        "morgan": "^1.10.0"
     },
     "devDependencies": {
         "nodemon": "^2.0.20"
