--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     },
     "homepage": "https://github.com/yuurierusan/Top-G-Auto-App#readme",
     "dependencies": {
+        "axios": "^1.3.2",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "mongoose": "^6.9.1",
-        "morgan": "^1.10.0"
+        "morgan": "^1.10.0",
+        "react-router-dom": "^6.8.1"
     },
     "devDependencies": {
         "nodemon": "^2.0.20"
