--- a/client/package.json
+++ b/client/package.json
@@ -4,10 +4,10 @@
     "version": "0.0.0",
     "type": "module",
     "scripts": {
+        "proxy": "http://localhost:3001",
         "dev": "vite",
         "build": "vite build",
-        "preview": "vite preview",
-        "proxy": "http://localhost:3001"
+        "preview": "vite preview"
     },
     "dependencies": {
         "axios": "^1.3.2",
