--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,8 @@
     "private": true,
     "version": "0.0.0",
     "type": "module",
+    // "proxy": "http://localhost:3001",
     "scripts": {
-        "proxy": "http://localhost:3001",
         "dev": "vite",
         "build": "vite build",
         "preview": "vite preview"
