--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
     "private": true,
     "version": "0.0.0",
     "type": "module",
+    "proxy": "http://localhost:3001",
     "scripts": {
         "dev": "vite",
         "build": "vite build",
@@ -12,12 +13,11 @@
         "axios": "^1.3.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-router-dom": "^6.8.1"
-    },
-    "devDependencies": {
+        "react-router-dom": "^6.8.1",
         "@types/react": "^18.0.27",
         "@types/react-dom": "^18.0.10",
         "@vitejs/plugin-react-swc": "^3.0.0",
         "vite": "^4.1.0"
-    }
+    },
+    "devDependencies": {}
 }
